Fix styling for page traversal buttons on mobile

--- a/resources/js/components/Bets.css
+++ b/resources/js/components/Bets.css
@@ -16,3 +16,9 @@
 .loader-container {
     height: 140px;
 }
+
+@media (max-width: 767px) {
+    .ui.grid .non-mobile {
+        display: none;
+    }
+}
